[gd_scene load_steps=9 format=3 uid="uid://c16mni53objyt"]

[ext_resource type="Script" uid="uid://d2ysavkhsfgf6" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://dpg07i4qe12x5" path="res://scenes/music.tscn" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bgvmmnqvlq24" path="res://assets/background/1.Backround.png" id="2_rtw2f"]
[ext_resource type="Texture2D" uid="uid://vkdgb62ahw5y" path="res://assets/background/2.Trees_back.png" id="3_oa1go"]
[ext_resource type="AudioStream" uid="uid://bayd4sn71pl7" path="res://assets/audio/Boost.wav" id="3_wu84c"]
[ext_resource type="Texture2D" uid="uid://bpuvhnkj7yidu" path="res://assets/background/3.Trees_front.png" id="4_tbmy8"]
[ext_resource type="Texture2D" uid="uid://daii8k31uu5p6" path="res://resources/button_texture.atlastex" id="6_jk1qb"]
[ext_resource type="Texture2D" uid="uid://cter5fwpign6g" path="res://resources/grabber_texture.atlastex" id="7_5dd4i"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Background" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("2_rtw2f")

[node name="TextureRect2" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_oa1go")

[node name="TextureRect3" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_tbmy8")

[node name="Label" type="Label" parent="Background"]
layout_mode = 0
offset_left = 238.0
offset_top = 150.0
offset_right = 316.0
offset_bottom = 175.0
text = "Godot Wild Jam #83
CONSUME"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 37.0
offset_right = 114.0
offset_bottom = 138.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_jk1qb")
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Play"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 48.0
offset_bottom = 14.0
text = "Play"
horizontal_alignment = 1

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("6_jk1qb")
flat = true

[node name="Audio" type="MenuButton" parent="VBoxContainer/Options"]
visible = false
layout_mode = 2
offset_left = 142.0
offset_top = 11.0
offset_right = 182.0
offset_bottom = 19.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Options/Audio"]
layout_mode = 0
offset_left = -54.0
offset_top = -47.0
offset_right = 62.0
offset_bottom = 85.0

[node name="Label" type="Label" parent="VBoxContainer/Options/Audio/VBoxContainer"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/Options/Audio/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("7_5dd4i")
theme_override_icons/grabber_highlight = ExtResource("7_5dd4i")
theme_override_icons/grabber_disabled = ExtResource("7_5dd4i")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label2" type="Label" parent="VBoxContainer/Options/Audio/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/Options/Audio/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("7_5dd4i")
theme_override_icons/grabber_highlight = ExtResource("7_5dd4i")
theme_override_icons/grabber_disabled = ExtResource("7_5dd4i")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Music" parent="VBoxContainer/Options/Audio/VBoxContainer/MusicSlider" instance=ExtResource("2_bqqt6")]
autoplay = false

[node name="Label3" type="Label" parent="VBoxContainer/Options/Audio/VBoxContainer"]
layout_mode = 2
text = "Effects"

[node name="EffectsSlider" type="HSlider" parent="VBoxContainer/Options/Audio/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("7_5dd4i")
theme_override_icons/grabber_highlight = ExtResource("7_5dd4i")
theme_override_icons/grabber_disabled = ExtResource("7_5dd4i")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX" type="AudioStreamPlayer" parent="VBoxContainer/Options/Audio/VBoxContainer/EffectsSlider"]
stream = ExtResource("3_wu84c")
bus = &"Effects"

[node name="ApplyAudioSettings" type="Button" parent="VBoxContainer/Options/Audio/VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_jk1qb")
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Options/Audio/VBoxContainer/ApplyAudioSettings"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 48.0
offset_bottom = 14.0
text = "Apply"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Options"]
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 14.0
text = "Options"
horizontal_alignment = 1

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_jk1qb")
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Quit"]
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 14.0
text = "Quit"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 2.0
offset_right = 260.0
offset_bottom = 37.0
theme_override_font_sizes/normal_font_size = 48
text = "FROG"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="toggled" from="VBoxContainer/Options" to="." method="_on_options_toggled"]
[connection signal="mouse_exited" from="VBoxContainer/Options/Audio/VBoxContainer/MasterSlider" to="." method="_on_master_slider_mouse_exited"]
[connection signal="value_changed" from="VBoxContainer/Options/Audio/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="mouse_exited" from="VBoxContainer/Options/Audio/VBoxContainer/MusicSlider" to="." method="_on_music_muisc_mouse_exited"]
[connection signal="value_changed" from="VBoxContainer/Options/Audio/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/Options/Audio/VBoxContainer/EffectsSlider" to="." method="_on_effects_slider_drag_ended"]
[connection signal="drag_started" from="VBoxContainer/Options/Audio/VBoxContainer/EffectsSlider" to="." method="_on_effects_slider_drag_started"]
[connection signal="mouse_exited" from="VBoxContainer/Options/Audio/VBoxContainer/EffectsSlider" to="." method="_on_effects_slider_mouse_exited"]
[connection signal="value_changed" from="VBoxContainer/Options/Audio/VBoxContainer/EffectsSlider" to="." method="_on_effects_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Options/Audio/VBoxContainer/ApplyAudioSettings" to="." method="_on_apply_audio_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
